# miditoqwerty

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  gl3w.c  main.cpp  themes.cpp  themes.h  util.h
cmake/: FindPortMidi.cmake
imgui/: imgui_tables.cpp
src/: Log.cpp  Log.h  Midi.cpp  Midi.h  Piano.cpp  Piano.h  Qwerty.h  inpututils.cpp  inpututils.h  main.cpp  resource.h  settings.cpp  settings.h  themes.cpp  themes.h  util.cpp
